Add REPLICATE_API_TOKEN and commit posted articles
Added REPLICATE_API_TOKEN to environment variables and included a step to commit and push posted articles.

--- a/.github/workflows/post_bot.yml
+++ b/.github/workflows/post_bot.yml
@@ -26,6 +26,15 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
+          REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
         run: python telegrambot.py
+      
+      - name: Commit posted articles
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add posted_articles.json
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update posted articles"
+          git push
 
 
