--- a/.github/workflows/post_bot.yml
+++ b/.github/workflows/post_bot.yml
@@ -5,11 +5,16 @@ on:
     - cron: '0 6,12,18 * * *'  # 9:00, 15:00, 21:00 по Москве (UTC+3)
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   post:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
