--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 aiogram==3.17.0
 openai==1.59.2
-requests==2
+requests>=2.32.0
+urllib3>=2.2.0
+chardet>=5.0.0
+idna>=3.7
+feedparser>=6.0.11
+
+
 
 
 
