--- a/.github/workflows/post_bot.yml
+++ b/.github/workflows/post_bot.yml
@@ -2,7 +2,7 @@ name: Telegram Post Bot
 
 on:
   schedule:
-    - cron: '0 6,12,18 * * *'  # 9:00, 15:00, 21:00 по Москве (UTC+3)
+    - cron: '0 6,12,15 * * *'  # 09:00, 15:00, 18:00 по Москве (UTC+3)
   workflow_dispatch:
 
 permissions:
@@ -15,6 +15,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Show current time
+        run: |
+          echo "UTC Time: $(date -u '+%Y-%m-%d %H:%M:%S')"
+          echo "MSK Time: $(TZ='Europe/Moscow' date '+%Y-%m-%d %H:%M:%S')"
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -39,7 +44,8 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add posted_articles.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update posted articles"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update posted articles [skip ci]"
           git push
+
 
 
