--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ requests==2.32.0
 feedparser==6.0.11
 aiogram==3.17.0
 openai==1.59.2
-xai-sdk
+beautifulsoup4==4.12.3
+lxml==5.1.0
+github-copilot-sdk
+
 
 
 
