--- a/.github/workflows/post_bot.yml
+++ b/.github/workflows/post_bot.yml
@@ -2,10 +2,6 @@ name: Telegram AI Tech Bot
 
 on:
   schedule:
-    # 06:00 UTC = 09:00 МСК
-    # 12:00 UTC = 15:00 МСК
-    # 15:00 UTC = 18:00 МСК
-    # 18:00 UTC = 21:00 МСК
     - cron: '0 6,12,15,18 * * *'
   workflow_dispatch:
 
@@ -18,33 +14,44 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Install deps
+        run: pip install -r requirements.txt
 
-      - name: Run AI Bot
+      - name: Debug - before
+        run: |
+          echo "📂 До запуска:"
+          wc -l posted_articles.json 2>/dev/null || echo "Файл не существует"
+
+      - name: Run bot
         env:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
         run: python telegrambot.py
 
+      - name: Debug - after
+        run: |
+          echo "📂 После запуска:"
+          wc -l posted_articles.json
+          tail -3 posted_articles.json
+
       - name: Commit state
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add posted_articles.json last_post_type.json
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update bot state [skip ci]" && git push)
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git add posted_articles.json
+          git diff --staged --quiet || git commit -m "Update state [skip ci]"
+          git push || (git pull --rebase && git push)
 
 
 
