--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 GROQ_API_KEY=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
 TELEGRAM_BOT_TOKEN=8014450079:AAHrXmbNAvT_L8UMJ3xoMnAyajGKGyXx5Yo
 CHANNEL_ID=@ID-1002287416438
+RETENTION_DAYS=45
+
 
 
 
